@@ -1,6 +1,7 @@
 27 April 2010: Wouter
 	- unbound-control get_option domain-insecure shows config file items.
 	- fix retry sequence if prime hints are recursion-lame.
+	- autotrust anchor file can be initialized with a ZSK key as well.
 
 26 April 2010: Wouter
 	- Compile fix using Sun Studio 12 compiler on Solaris 5.9, use
